kubernetes/default/immich/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "100"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.bhamm-lab.com`)
      kind: Rule
      middlewares:
        - name: default-headers
          # - name: forwardauth-authelia
      services:
        - name: immich-server
          port: 2283
          scheme: http
  tls:
    secretName: bhamm-lab-tls
